# ALT_Controller_bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: api.Dockerfile  bot.Dockerfile
sql/: 0001_initial.sql
src/alt_controller_bot/: __init__.py
src/alt_controller_bot/api/: __init__.py  main.py
src/alt_controller_bot/bot/: __init__.py  main.py  routers.py
src/alt_controller_bot/bot/handlers/: __init__.py  channels.py  common.py  drafts.py  stats.py
src/alt_controller_bot/core/: __init__.py  config.py
src/alt_controller_bot/db/: __init__.py  database.py  models.py
src/alt_controller_bot/services/: __init__.py  rbac.py  repositories.py
